# pic-scale

./: .gitignore  Cargo.toml  README.md  copy_risc.sh  risc.sh
.cargo/: config.toml
.github/workflows/: build_push.yml  build_push_arm.yml  build_push_s.yml  build_push_sse.yml  mirroring.yaml  npm_publish.yml  publish_pypi.yml  publish_release.yml
app/: Cargo.toml
app/accelerate/: build.rs
app/accelerate/src/: lib.rs
app/benches/resize_cbcr/: main.rs
app/benches/resize_plane/: main.rs
app/benches/resize_rgb/: main.rs
app/benches/resize_rgba/: main.rs
app/src/: acc.rs  fuzzer_explore.rs  main.rs
assets/: sve_vl.py
benches/resize_rgb/: main.rs
benches/resize_rgba/: main.rs
fuzz/: Cargo.toml
fuzz/colorspaces/: colorspaces.rs
fuzz/resize_cbcr16/: resize_cbcr16.rs
fuzz/resize_cbcr8/: resize_cbcr8.rs
fuzz/resize_cbcr_f16/: resize_cbcr_f16.rs
fuzz/resize_cbcr_f32/: resize_cbcr_f32.rs
fuzz/resize_plane/: resize_plane.rs
fuzz/resize_plane_f32/: resize_plane_f32.rs
fuzz/resize_plane_u16/: resize_plane_u16.rs
fuzz/resize_rgb/: resize_rgb.rs
fuzz/resize_rgb_f16/: resize_rgb_f16.rs
fuzz/resize_rgb_f32/: resize_rgb_f32.rs
fuzz/resize_rgb_u16/: resize_rgb_u16.rs
fuzz/resize_rgba/: resize_rgba.rs
fuzz/resize_rgba_f16/: resize_rgba_f16.rs
fuzz/resize_rgba_f32/: resize_rgba_f32.rs
fuzz/resize_rgba_u16/: resize_rgba_u16.rs
pic-scale-js/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package.json  publish.sh  try.mjs
pic-scale-js/src/: avif_enc.rs  core.rs  heif.rs  jxl.rs  lib.rs  metadata.rs  napi_bindings.rs  transpose.rs  wasm_bindings.rs
pic-scale-py/: Cargo.toml  README.md  pyproject.toml
pic-scale-py/python/pic_scale/: __init__.py
pic-scale-py/src/: lib.rs
pic-scale-py/tests/: test_pic_scale.py
picscale/: .gitignore  Cargo.toml  build.rs
picscale/include/: picscale.h
picscale/src/: lib.rs
speedtest/: Cargo.toml
speedtest/src/: main.rs  runner.rs  runner_f32.rs  runner_u16.rs
src/: acceleration_feature.rs  alpha_check.rs  alpha_handle.rs  alpha_handle_f16.rs  alpha_handle_f32.rs  alpha_handle_u16.rs  alpha_handle_u8.rs  ar30.rs  avx2_utils.rs  cbcr16.rs  cbcr8.rs  cbcr_f32.rs  chunking.rs  color_group.rs  convolution.rs  convolve_f32.rs  convolve_naive_f32.rs  convolve_naive_u16.rs  convolve_naive_u8.rs  convolve_u8.rs  cpu_features.rs  dispatch_group_ar30.rs  dispatch_group_f16.rs  dispatch_group_f32.rs  dispatch_group_u16.rs  dispatch_group_u8.rs  f16.rs  filter_weights.rs  fixed_point_horizontal.rs  fixed_point_horizontal_ar30.rs  fixed_point_vertical.rs  fixed_point_vertical_ar30.rs  floating_point_horizontal.rs  floating_point_vertical.rs  handler_provider.rs  image_size.rs  image_store.rs  lab_scaler.rs  lch_scaler.rs  lib.rs  (+33 more)
src/avx2/: alpha_f16.rs  alpha_f32.rs  alpha_u16.rs  alpha_u8.rs  ar30_utils.rs  check_alpha.rs  horizontal_ar30.rs  mod.rs  plane_f32.rs  plane_f32_f64.rs  plane_s16_lb.rs  plane_u16.rs  plane_u16_lb.rs  rgb_f32.rs  rgb_f32_f64.rs  rgb_u16.rs  rgb_u16_lb.rs  rgb_u8.rs  rgb_u8_dot_i8.rs  rgba_f16.rs  rgba_f32.rs  rgba_f32_f64.rs  rgba_u16.rs  rgba_u16_lb.rs  rgba_u8.rs  rgba_u8_dot_lp.rs  rgba_u8_lb.rs  rgba_u8_q07.rs  routines.rs  utils.rs  vertical_ar30.rs  vertical_f16.rs  vertical_f32.rs  vertical_f32_f64.rs  vertical_s16_lb.rs  vertical_u16.rs  vertical_u16_lb.rs  vertical_u8.rs  vertical_u8_lp.rs
src/avx512/: alpha_u8.rs  avx512_setr.rs  check_alpha.rs  mod.rs  rgba_u16_lp.rs  rgba_u8_dot.rs  rgba_u8_dot_lp.rs  rgba_u8_dot_vnni.rs  utils.rs  vertical_u16_lb.rs  vertical_u8_lp.rs
src/colors/: common_splitter.rs  cvt.rs  jzazbz_scaler.rs  lab_scaler.rs  lch_scaler.rs  linear_precise_scaler.rs  linear_scaler.rs  luv_scaler.rs  mod.rs  oklab_scaler.rs  sigmoidal_scaler.rs  xyz_scaler.rs
src/factory/: ar30.rs  cbcr16.rs  cbcr8.rs  cbcr_f32.rs  mod.rs  plane_f32.rs  plane_s16.rs  plane_u16.rs  plane_u8.rs  rgb_f32.rs  rgb_u16.rs  rgb_u8.rs  rgba_f32.rs  rgba_u16.rs  rgba_u8.rs
src/math/: bartlett.rs  bc_spline.rs  bessel_i0.rs  bessel_order_one.rs  bilinear.rs  blackman.rs  bohman.rs  consts.rs  cubic.rs  dd.rs  gaussian.rs  hann.rs  jinc.rs  kaiser.rs  lagrange.rs  lanczos.rs  mod.rs  quadric.rs  sinc.rs  sphinx.rs  spline_n.rs  weights.rs  welch.rs
src/neon/: alpha.rs  alpha_f16.rs  alpha_f16_full.rs  alpha_f32.rs  alpha_u16.rs  alpha_u8.rs  ar30.rs  cbcr8.rs  cbcr8_dot.rs  cbcr8_rdm.rs  cbcr_u16.rs  cbcr_u16_lb.rs  check_alpha.rs  convolve_f16.rs  convolve_f32.rs  f16_utils.rs  horizontal_ar30.rs  horizontal_ar30_rdm.rs  mod.rs  plane_f32.rs  plane_f32_f64.rs  plane_s16_hb.rs  plane_s16_lb.rs  plane_u16.rs  plane_u16_hb.rs  plane_u16_lb.rs  plane_u8.rs  plane_u8_rdm.rs  rgb_f16.rs  rgb_f16_fhm.rs  rgb_f16_full.rs  rgb_f32.rs  rgb_f32_f64.rs  rgb_u16.rs  rgb_u16_hb.rs  rgb_u16_lb.rs  rgb_u8.rs  rgb_u8_dot.rs  rgb_u8_sqrdml.rs  rgba_f16.rs  (+28 more)
src/plan/: alpha_plan.rs  alpha_planner.rs  ar30_plan.rs  default_planner.rs  horizontal_filtering.rs  mod.rs  multi_step_plan.rs  nearest_plan.rs  non_alpha_plan.rs  noop_plan.rs  planner.rs  superresolution.rs  supersampling.rs  trampoline_filtering.rs  vertical_filtering.rs
src/risc/: alpha_f16.rs  alpha_f32.rs  alpha_u8.rs  feature_selector.rs  horiz_rgba_n1_f16.asm  horiz_rgba_n1_f32.asm  horiz_rgba_n1_u8.asm  horiz_rgba_n4_f16.asm  horiz_rgba_n4_f32.asm  horiz_rgba_n4_u8.asm  mod.rs  premultiply_alpha_f16.asm  premultiply_alpha_f32.asm  premultiply_alpha_u8.asm  rgba_f16.rs  rgba_f32.rs  rgba_u8.rs  unpremultiply_alpha_f16.asm  unpremultiply_alpha_f32.asm  unpremultiply_alpha_u8.asm  vendor.rs  vert_1_f16.asm  vert_1_f32.asm  vert_1_u8.asm  vert_n_f16.asm  vert_n_f32.asm  vert_n_m2_u8.asm  vert_n_m_2_f16.asm  vert_n_m_2_f32.asm  vert_n_m_3_f32.asm  vert_n_u8.asm  vertical_f16.rs  vertical_f32.rs  vertical_u8.rs
src/sse/: alpha_f16.rs  alpha_f32.rs  alpha_u16.rs  alpha_u8.rs  cbcr8.rs  cbcr8_hrs.rs  check_alpha.rs  f16_utils.rs  horizontal_ar30.rs  mod.rs  plane_f32.rs  plane_u8.rs  plane_u8_hrs.rs  rgb_f16.rs  rgb_f32.rs  rgb_u16.rs  rgb_u8.rs  rgba_f16.rs  rgba_f32.rs  rgba_u16.rs  (+14 more)
wasm/: Cargo.toml  run.sh
(+12 files in other folders)
