workspace = { members = ["app", "wasm"] }

[package]
name = "pic-scale"
version = "0.2.13"
edition = "2021"
description = "High performance image scaling"
readme = "README.md"
keywords = ["scale", "resize", "image-resize"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/pic-scale"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/pic-scale"
repository = "https://github.com/awxkee/pic-scale"
exclude = ["*.jpg", "/assets", "*.png", "*.sh"]

[dependencies]
colorutils-rs = {version = "0.7.0", optional = true}
half = { version = "2.4.1", optional = true, features = ["alloc", "std", "num-traits"] }
num-traits = { version = "0.2.19", features = ["std"] }
rayon = "1.10.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2.158"

[features]
default = ["colorspaces"]
colorspaces = ["dep:colorutils-rs"]
riscv = []
disable_simd = []