workspace = { members = ["app", "wasm", "fuzz", "app/accelerate"], exclude = ["picscale"] }

[package]
name = "pic-scale"
version = "0.5.6"
edition = "2021"
description = "High performance image scaling"
readme = "README.md"
keywords = ["scale", "resize", "image-resize"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/pic-scale"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/pic-scale"
repository = "https://github.com/awxkee/pic-scale"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
rust-version = "1.82.0"

[dependencies]
colorutils-rs = {version = "0.7.4", optional = true}
num-traits = { version = "0.2.19", features = ["std"] }
rayon = "1.10.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2.158"

[features]
default = ["colorspaces", "rdm", "sse", "avx"]
colorspaces = ["dep:colorutils-rs"]
nightly_avx512 = []
nightly_avx512fp16 = ["nightly_avx512"]
nightly_f16 = []
rdm = []
avx = []
sse = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]