workspace = { members = ["app", "wasm", "fuzz", "app/accelerate"], exclude = ["picscale"] }

[package]
name = "pic-scale"
version = "0.6.0"
edition = "2024"
description = "High performance image scaling"
readme = "README.md"
keywords = ["scale", "resize", "image-resize"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/pic-scale"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/pic-scale"
repository = "https://github.com/awxkee/pic-scale"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
rust-version = "1.85.0"

[dependencies]
colorutils-rs = {version = "0.7", optional = true}
num-traits = { version = "0.2", features = ["std"] }
rayon = "1.10"

[features]
default = ["colorspaces", "rdm", "sse", "avx"]
colorspaces = ["dep:colorutils-rs"]
# Allows to use x86_64 AVX-512 when available
nightly_avx512 = []
# Allows to use x86_64 AVX-512FP16 when available
nightly_avx512fp16 = ["nightly_avx512"]
# Allows to scale nightly `f16` type
nightly_f16 = []
# Allows to use ARM RDM when available
rdm = []
# Allows to use x86_64 AVX2 when available
avx = []
# Allows to use x86/x86_64 SSE4.1 when available
sse = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]