[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", features = ["default"] }
pic-scale = { path = "..", features = ["nightly_f16"], default-features = false }
fast_image_resize = { version = "5.0.0", features = [] }
half = { version = "2.4.1", default-features = true }
accelerate = {path = "accelerate/"}
libc = "0.2.169"

[dev-dependencies]
criterion = "0.5.1"
#image = { version = "0.25.2", features = ["default"] }
fast_image_resize = { version = "5.0.0", features = [] }
pic-scale = { path = "..", features = ["nightly_f16", "rdm"], default-features = false }

[[bench]]
name = "resize_rgb"
harness = false

[[bench]]
name = "resize_rgba"
harness = false