[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["default"] }
pic-scale = { path = "..", features = ["nightly_f16", "rdm", "nightly_i8mm", "avx", "sse", "colorspaces"], default-features = false }
fast_image_resize = { version = "5", features = [] }
accelerate = { path = "accelerate/" }
yuv = "0.8.3"
libc = "0.2.169"

[dev-dependencies]
criterion = "0.6"
#image = { version = "0.25.2", features = ["default"] }
fast_image_resize = { version = "5", features = [] }

[[bench]]
name = "resize_rgb"
harness = false

[[bench]]
name = "resize_rgba"
harness = false

[[bench]]
name = "resize_plane"
harness = false