[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["default"] }
pic-scale = { path = "..", features = ["nightly_f16", "rdm", "nightly_i8mm", "avx", "sse", "colorspaces", "avx512", "sve"], default-features = false }
fast_image_resize = { version = "6.0.0", features = [] }
accelerate = { path = "accelerate/" }
rand = "0.10.1"
libc = "0.2.185"

[dev-dependencies]
criterion = "0.8.2"
#image = { version = "0.25.2", features = ["default"] }
fast_image_resize = { version = "6.0.0", features = [] }

[[bench]]
name = "resize_rgb"
harness = false

[[bench]]
name = "resize_rgba"
harness = false

[[bench]]
name = "resize_plane"
harness = false

[[bench]]
name = "resize_cbcr"
harness = false