[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pic-scale = { path = "../" }

[features]
nightly_i8mm = ["pic-scale/nightly_i8mm"]
nightly_avx512 = ["pic-scale/nightly_avx512"]

[[bin]]
name = "resize_rgba"
path = "resize_rgba/resize_rgba.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_rgb"
path = "resize_rgb/resize_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_cbcr8"
path = "resize_cbcr8/resize_cbcr8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_plane"
path = "resize_plane/resize_plane.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_rgba_u16"
path = "resize_rgba_u16/resize_rgba_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_cbcr16"
path = "resize_cbcr16/resize_cbcr16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_cbcr_f32"
path = "resize_cbcr_f32/resize_cbcr_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_rgb_u16"
path = "resize_rgb_u16/resize_rgb_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_plane_u16"
path = "resize_plane_u16/resize_plane_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_rgba_f32"
path = "resize_rgba_f32/resize_rgba_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_rgb_f32"
path = "resize_rgb_f32/resize_rgb_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize_plane_f32"
path = "resize_plane_f32/resize_plane_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "colorspaces"
path = "colorspaces/colorspaces.rs"
test = false
doc = false
bench = false
