[package]
name = "pic-scale-py"
version = "0.7.7"
edition = "2024"
description = "High performance image scaling"
readme = "README.md"
keywords = ["scale", "resize", "image-resize"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/pic-scale"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/pic-scale"
repository = "https://github.com/awxkee/pic-scale"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*", "/.github"]
rust-version = "1.89.0"

[dependencies]
pic-scale = { path = "../" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[features]
default = ["neon", "rdm", "sse", "avx"]
# Allows to use x86_64 AVX-512 when available
avx512 = ["pic-scale/avx512"]
# Allows to scale nightly `f16` type
nightly_f16 = []
# Allows to use ARM NEON when available
neon = ["pic-scale/neon"]
# Allows to use ARM RDM when available
rdm = ["pic-scale/rdm"]
# Allows to use x86_64 AVX2 when available
avx = ["pic-scale/avx"]
# Allows to use x86/x86_64 SSE4.1 when available
sse = ["pic-scale/sse"]
# Allows to use ARM i8mm when available
nightly_i8mm = ["pic-scale/nightly_i8mm"]
# Allows use nightly SVE2
sve = ["pic-scale/sve"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"